# apistreamhub-fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENVIRONMENT_CONFIG.md  FINAL_STATUS.md  GITHUB_COMPLETE.md  HTTPONLY_COOKIES_IMPLEMENTATION.md  MIGRATION_STEPS.md  POC.md  POC_COMPLETE.md  PROJ-004-COMPLETE.md  README.md  README_STREAMING.md  SCREENS_API_AUDIT_REPORT.md  SECURITY_FIX.md  SECURITY_HARDENING.md  VIDEO_ENDPOINTS_COMPLETE.md  create_playlist_tables.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  init_db.py  pyproject.toml  pytest.ini  refresh_token.txt  requirements-test.txt  requirements.txt  test-auto-commit.md  test-playlist-api.sh  test-streaming.sh  test-upload-direct.js  test_db.py  test_token.txt
app/: config.py  main.py
app/api/: playlists.py  videos_upload.py
app/core/: exceptions.py  rate_limiter.py  security.py
app/db/: base.py
app/models/: __init__.py  campaign.py  channel.py  layout.py  playback_log.py  playlist.py  playlist.py.old  role_preset.py  screen.py  screen_group.py  (+4 more)
migrations/: 001_add_video_metadata.sql  002_create_role_presets.sql  003_create_screens.sql  004_create_layouts.sql  005_create_campaigns.sql  006_create_templates.sql  add_role_columns.sql  add_streaming_fields.sql  add_video_upload_fields.sql  alter_playlist_items_duration_numeric.sql
scripts/: init-database.sh  verify_security.py
tests/: conftest.py  test_auth.py  test_channels.py  test_security_hardening.py  test_services.py  test_streaming.py  test_video_service.py  test_videos.py
(+40 files in other folders)
